# Drone-Squadron-SDL2-Cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/: DeltaTime.cpp  Game.cpp  Game.h  Init.cpp  Init.h  Logger.cpp  Logger.h  Resource.cpp  Resource.h  Texture.cpp  Texture.h  constants.cpp  constants.h  main.cpp  main.h
src/buttons/: TurnLeft.cpp  TurnLeft.h  TurnRight.cpp  TurnRight.h
src/geometry/: Angle.cpp  Angle.h  Point.cpp  Point.h  Vector.cpp  Vector.h
src/graphics/: Drone.cpp  Drone.h  GameObject.cpp  GameObject.h  Particle.cpp  Particle.h  Resource.h  Texture.cpp  Texture.h
src/sdl_utilities/: Deinit.cpp  Deinit.h  Init.cpp  Init.h
src/ui/: Button.cpp  Button.h  Panel.cpp  Panel.h  View.cpp  View.h
src/utilities/: DeltaTime.h  FPS.h  Timer.cpp  Timer.h
